--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,23 @@
   }
 }
 
+@layer layout {
+  .wrapper {
+    max-width: 1130px;
+    margin-inline: auto;
+    padding-inline: 1rem;
+    /* keep the max size consistent with the design when padding accounted for*/
+    box-sizing: content-box;
+
+    &[data-width="wide"] {
+      max-width: 1330px;
+    }
+    &[data-width="narrow"] {
+      max-width: 720px;
+    }
+  }
+}
+
 @layer utilities {
   .visually-hidden {
     clip: rect(0 0 0 0);
