--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,16 @@
 }
 
 @layer layout {
+  /* add flow by setting margin-top from the 0 value introduced by the reset above */
+  .flow > * + * {
+    margin-top: 1em;
+  }
+
+  .grid-flow {
+    display: grid;
+    gap: var(--grid-flow-gap, 1rem);
+  }
+
   .equal-columns {
     display: grid;
     gap: var(--equal-columns-gap, 1rem);
@@ -244,6 +254,79 @@
       flex-wrap: wrap;
       gap: 0.5rem 1rem;
     }
+  }
+
+  .hero {
+    text-align: center;
+    font-size: var(--font-size-md);
+    color: var(--text-high-contrast);
+    background-image: url(/assets/hero.webp);
+    background-size: cover;
+    background-position: center;
+  }
+  .hero__title {
+    font-size: var(--font-size-heading-lg);
+    span {
+      font-size: var(--font-size-heading-xl);
+      color: var(--text-brand);
+      display: block;
+    }
+  }
+
+  .card {
+    display: grid;
+    gap: var(--card-gap, 1rem);
+    padding: 1rem;
+    background-color: var(--background-light);
+    border-radius: var(--border-radius-3);
+    img {
+      border-radius: var(--border-radius-2);
+    }
+  }
+  .card__title {
+    font-size: var(--card-title-fs, var(--font-size-heading-sm));
+    color: var(--card-title-color, var(--text-brand));
+  }
+
+  .button {
+    display: inline-flex;
+    color: var(--text-high-contrast);
+    background-color: var(--background-accent-main);
+    font-size: var(--font-size-md);
+    font-family: var(--ff-heading);
+    font-weight: 700;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    border-radius: var(--border-radius-1);
+    text-decoration: none;
+  }
+  .button:hover,
+  .button:focus {
+    color: var(--text-high-contrast);
+    background-color: var(--background-accent-light);
+  }
+
+  .site-footer {
+    background-color: var(--background-dark);
+    text-align: center;
+    padding-block: 2rem;
+    display: grid;
+    gap: 2rem;
+
+    a {
+      color: var(--text-main);
+      text-decoration: none;
+    }
+    a:hover,
+    a:focus {
+      color: var(--text-brand-light);
+    }
+  }
+  .site-footer__title {
+    font-size: var(--font-size-md);
+    font-family: var(--ff-heading);
+    font-weight: 700;
   }
 }
 
