--- a/styles.css
+++ b/styles.css
@@ -249,6 +249,16 @@
     justify-content: space-between;
   }
 
+  [aria-controls="primary-nav"] {
+    z-index: 100;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+
+    img {
+      border-radius: 0;
+    }
+  }
   .primary-navigation {
     ul {
       display: flex;
@@ -257,6 +267,34 @@
     }
     a {
       text-decoration: none;
+    }
+
+    [aria-controls="primary-nav"] {
+      z-index: 100;
+    }
+
+    @media (width < 760px) {
+      position: absolute;
+      z-index: 10;
+      top: 0;
+      right: 0;
+      font-size: var(--font-size-lg);
+      font-weight: 700;
+      font-family: var(--ff-heading);
+      background-color: var(--background-accent-main);
+      padding: 2rem;
+      border-radius: 0 0 0 var(--border-radius-3);
+      ul {
+        gap: 0;
+        flex-direction: column;
+      }
+
+      /*  this selctor is the same as li[not:firstchild] */
+      li + li {
+        margin-block-start: 1.5rem;
+        padding-block-start: 1.5rem;
+        border-top: 2px solid var(--background-accent-light);
+      }
     }
   }
 
