--- a/styles.css
+++ b/styles.css
@@ -191,6 +191,13 @@
     gap: var(--grid-flow-gap, 1rem);
   }
 
+  .grid-auto-fit {
+    --auto-fit-min-col-size: 250px;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(min(var(--auto-fit-min-col-size), 100%), 1fr));
+  }
+
   .equal-columns {
     display: grid;
     gap: var(--equal-columns-gap, 1rem);
@@ -348,6 +355,12 @@
     }
   }
 
+  .mushroom-guide {
+    --card-title-font-size: var(--font-size-lg);
+    --card-title-color: var(--text-high-contrast);
+    --card-gap: 0.75rem;
+  }
+
   .card {
     display: grid;
     gap: var(--card-gap, 1rem);
@@ -359,8 +372,44 @@
     }
   }
   .card__title {
-    font-size: var(--card-title-fs, var(--font-size-heading-sm));
+    font-size: var(--card-title-font-size, var(--font-size-heading-sm));
     color: var(--card-title-color, var(--text-brand));
+  }
+  .card__note {
+    background-color: var(--background-extra-light);
+    padding: .75rem;
+    border-radius: var(--border-radius-2);
+  }
+
+  .tag-list {
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+
+    li {
+      font-family: var(--ff-heading);
+      font-size: var(--font-size-sm);
+      color: var(--text-high-contrast);
+      padding: 0 0.25rem;
+      background-color: var(--tag-bg, red);
+      border-radius: var(--border-radius-1);
+    }
+
+    [data-type="edible"] {
+      background-color: var(--background-accent-main);
+    }
+    [data-type="toxic"] {
+      background-color: var(--clr-red-500)
+    }
+    [data-season="summer"] {
+      background-color: var(--background-accent-main);
+    }
+    [data-season="spring"] {
+      background-color: var(--clr-teal-500)
+    }
+    [data-season="fall"] {
+      background-color: var(--clr-orange-500)
+    }
   }
 
   .button {
