--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,11 @@
 
 @layer layout {
   /* add flow by setting margin-top from the 0 value introduced by the reset above */
+  .flex-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
   .flow > * + * {
     margin-top: 1em;
   }
@@ -447,6 +452,13 @@
     font-size: var(--font-size-md);
     font-family: var(--ff-heading);
     font-weight: 700;
+  }
+  select {
+    padding: 0.5rem 1rem;
+    background-color: var(--background-accent-main);
+    border: 0;
+    border-radius: var(--border-radius-2);
+    color: var(--text-high-contrast);
   }
 }
 
