Update styling of mushroom card from grid to flex layout to deal and use block-margin to push the 'notes' to the bottom of the card

--- a/styles.css
+++ b/styles.css
@@ -367,7 +367,8 @@
   }
 
   .card {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: var(--card-gap, 1rem);
     padding: 1rem;
     background-color: var(--background-light);
@@ -381,6 +382,7 @@
     color: var(--card-title-color, var(--text-brand));
   }
   .card__note {
+    margin-block-start: auto;
     background-color: var(--background-extra-light);
     padding: .75rem;
     border-radius: var(--border-radius-2);
