--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
   }
 
   /* https://www.scottohara.me/blog/2019/01/12/lists-and-safari.html */
-  [role="list"] {
+  [role='list'] {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -91,8 +91,8 @@
     --clr-red-500: hsl(359, 34%, 24%);
     --clr-teal-500: hsl(186, 42%, 25%);
 
-    --ff-heading: "Outfit", sans-serif;
-    --ff-body: "Fira Sans", sans-serif;
+    --ff-heading: 'Outfit', sans-serif;
+    --ff-body: 'Fira Sans', sans-serif;
 
     --fs-300: 0.875rem;
     --fs-400: 1rem;
@@ -200,7 +200,10 @@
     --auto-fit-min-col-size: 250px;
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(min(var(--auto-fit-min-col-size), 100%), 1fr));
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(min(var(--auto-fit-min-col-size), 100%), 1fr)
+    );
   }
 
   .equal-columns {
@@ -213,11 +216,11 @@
       grid-auto-columns: 1fr;
     }
 
-    &[data-gap="large"] {
+    &[data-gap='large'] {
       --equal-columns-gap: 2rem;
     }
 
-    &[data-alignment="centered"] {
+    &[data-alignment='centered'] {
       --equal-columns-vertical-alignment: center;
     }
   }
@@ -228,7 +231,7 @@
     @media (width > 760px) {
       --padding: 8rem;
 
-      &[data-padding="compact"] {
+      &[data-padding='compact'] {
         --padding: 4.5rem;
       }
     }
@@ -240,17 +243,17 @@
     /* keep the max size consistent with the design when padding accounted for*/
     box-sizing: content-box;
 
-    &[data-width="wide"] {
+    &[data-width='wide'] {
       max-width: 1330px;
     }
-    &[data-width="narrow"] {
+    &[data-width='narrow'] {
       max-width: 720px;
     }
   }
 }
 
 @layer components {
-  .skip-to-main:not(:focus){
+  .skip-to-main:not(:focus) {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     height: 1px;
@@ -277,7 +280,7 @@
     justify-content: space-between;
   }
 
-  [aria-controls="primary-nav"] {
+  [aria-controls='primary-nav'] {
     z-index: 100;
     background-color: transparent;
     border: 0;
@@ -288,7 +291,7 @@
     }
   }
 
-  [aria-controls="primary-nav"] {
+  [aria-controls='primary-nav'] {
     display: none;
   }
 
@@ -302,7 +305,7 @@
       text-decoration: none;
     }
 
-    [aria-controls="primary-nav"] {
+    [aria-controls='primary-nav'] {
       z-index: 100;
     }
 
@@ -334,11 +337,11 @@
   }
 
   @media (width < 760px) {
-    [aria-controls="primary-nav"] {
+    [aria-controls='primary-nav'] {
       display: block;
     }
 
-    [aria-expanded="true"] + .primary-navigation {
+    [aria-expanded='true'] + .primary-navigation {
       display: block;
     }
   }
@@ -366,6 +369,62 @@
     --card-gap: 0.75rem;
   }
 
+  .faq-bento {
+    --card-title-color: var(--text-high-contrast);
+
+    display: grid;
+    gap: 1rem;
+    grid-template-areas:
+      'card-one'
+      'card-two'
+      'card-three'
+      'card-four';
+
+    .card:nth-child(1) {
+      grid-area: card-one;
+    }
+    .card:nth-child(2) {
+      grid-area: card-two;
+    }
+    .card:nth-child(3) {
+      grid-area: card-three;
+    }
+    .card:nth-child(4) {
+      grid-area: card-four;
+    }
+    .card > img {
+      height: 100%;
+      object-fit: cover;
+    }
+
+    @media (width > 600px) {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-areas:
+        'card-one card-two'
+        'card-three card-four';
+
+      .card:nth-child(even) img {
+        order: 3;
+      }
+    }
+    @media (width > 900px) {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-areas:
+        'card-one card-two card-four'
+        'card-three card-three card-four';
+
+      .card:nth-child(3) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        img {
+          grid-column: 1 / 2;
+          grid-row: 1 / 3;
+        }
+      }
+    }
+  }
+
   .card {
     display: flex;
     flex-direction: column;
@@ -384,7 +443,7 @@
   .card__note {
     margin-block-start: auto;
     background-color: var(--background-extra-light);
-    padding: .75rem;
+    padding: 0.75rem;
     border-radius: var(--border-radius-2);
   }
 
@@ -402,20 +461,20 @@
       border-radius: var(--border-radius-1);
     }
 
-    [data-edible="edible"] {
+    [data-edible='edible'] {
       background-color: var(--background-accent-main);
     }
-    [data-edible="toxic"] {
-      background-color: var(--clr-red-500)
+    [data-edible='toxic'] {
+      background-color: var(--clr-red-500);
     }
-    [data-season="summer"] {
+    [data-season='summer'] {
       background-color: var(--background-accent-main);
     }
-    [data-season="spring"] {
-      background-color: var(--clr-teal-500)
+    [data-season='spring'] {
+      background-color: var(--clr-teal-500);
     }
-    [data-season="fall"] {
-      background-color: var(--clr-orange-500)
+    [data-season='fall'] {
+      background-color: var(--clr-orange-500);
     }
   }
 
