--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,7 @@
       flex-wrap: wrap;
       gap: 0.5rem 1rem;
     }
+
     a {
       text-decoration: none;
     }
@@ -318,6 +319,9 @@
 
     @media (width < 760px) {
       display: none;
+      transition: 1s, display 1s;
+      translate: 100% 0;
+      transition-behavior: allow-discrete;
 
       position: absolute;
       z-index: 10;
@@ -350,6 +354,11 @@
 
     [aria-expanded='true'] + .primary-navigation {
       display: block;
+      translate: 0 0;
+
+      @starting-style {
+        translate: 100% 0;
+      }
     }
   }
 
